sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:8: error: not found: value tri1
	while(tri1 || tri2) {
              ^