sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {

	var length = getNombreValeurs();
	var tri = true;

	
	while(tri1 || tri2) {

		tri = false;
		
		for(i<-0 to length-2) {
			if(plusPetit(i, i+1) == false) {
				echange(i, i+1);
				tri = true;
			}
		}
		for(i<-length-2 to 0) {
			if(plusPetit(i, i+1) == false) {
				echange(i, i+1);
				tri = true;
			}
		}
	} 
}
